--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prisma": "5.7.0",
     "tsup": "8.0.1",
     "tsx": "4.6.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "4.2.2",
+    "vitest": "1.0.4"
   },
   "dependencies": {
     "@prisma/client": "5.7.0",
