--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@prisma/client": "5.7.0",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "eslint-config-prettier": "9.1.0",
     "fastify": "4.24.3",
