--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.55.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.7.0",
+    "supertest": "6.3.4",
     "tsup": "8.0.1",
     "tsx": "4.6.2",
     "typescript": "5.3.3",
