--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -25,6 +25,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run test:e2e
-        environment:
+        env:
           JWT_SECRET: testing-secret
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
